SOLVED 045 046 - List client Keys, tests coverage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ micronaut:
 
 api.version: v1
 
+jackson:
+  date-format: yyyy-MM-dd HH:mm:ss
+  serializationInclusion: ALWAYS
+
 grpc:
   client:
     plaintext: true
