--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,3 +10,7 @@ micronaut:
           - http://localhost:8081
 
 api.version: v1
+
+jackson:
+  date-format: yyyy-MM-dd HH:mm:ss
+  serializationInclusion: ALWAYS
